--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>labs.numbers - Demo - &copy; konstantin.denerz</title>
+  <title>labs.number - Demo - &copy; konstantin.denerz</title>
   <link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
   <script type='text/javascript' src='bower_components/jquery/dist/jquery.min.js'></script>
   <script type='text/javascript' src='bower_components/jquery-ui/ui/minified/jquery-ui.min.js'></script>
